// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveConfig gets default config 1`] = `
Object {
  "baseDefaultProps": Object {
    "defaultClassName": "Icon",
    "fill": "currentColor",
  },
  "baseMapProps": Object {
    "text": Object {
      "size": "1.2em",
    },
  },
  "baseName": "./Icon",
  "baseTemplate": [Function],
  "camelCaseProps": true,
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "name": "Icon",
  "svgoPlugins": Array [],
  "template": [Function],
}
`;

exports[`resolveConfig overwrites default config 1`] = `
Object {
  "baseDefaultProps": Object {
    "defaultClassName": "MyIcon",
    "fill": "currentColor",
  },
  "baseMapProps": Object {
    "text": Object {
      "size": "1.2em",
    },
  },
  "baseName": "./Icon",
  "baseTemplate": [Function],
  "camelCaseProps": true,
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "name": "Icon",
  "svgoPlugins": Array [
    Object {
      "removeAttrs": Object {
        "attrs": "fill",
      },
    },
  ],
  "template": [Function],
}
`;
